--- a/Epidata_writeup.qmd
+++ b/Epidata_writeup.qmd
@@ -176,6 +176,33 @@ By analyzing these heatmaps, policymakers and public health officials can identi
 
 ### Question 3: Is there a correlation between the releases of news articles reporting COVID-19 and the spread speed of COVID-19?
 
+#### Introduction
+
+Our objective in Task 3 was using time series to see the disease growth rate and understand the changes in disease growth rate after the relative news reports at the first beginning of the COVID-19 pandemic. So here we chose to use a mixture of a line graph and a histogram to display the number of monthly COVID-19 cases and the number of news articles. This plot could show the trend clearly, allowing us to see local decline or growth and displaying the contrast. Only COVID-19 was chosen here because COVID-19 is the most recent and largest pandemic with plenty of news sources, so we could explore potential patterns.
+
+#### Approach
+
+From September 2020 onwards, the trend of the covid-19 outbreak could be characterized by a “second wave”, especially in the introduction of tougher bordering restrictions, and the surge in the number of cases. At the same time, several media reports also reported that it was the beginning of the second wave of the pandemic. Therefore, we chose to filter news about COVID-19 through September 2020. The news data was obtained from Multidisciplinary Digital Publishing Institute (MDPI). News was collected by Web Scraper through Rstudio. Here we get 3155 news in total which covers the whole year of 2020, because we are looking at the early stages of the outbreak and the impact of the news on it. So here we only choose news up to September 2020. The website of news is in the reference section.
+
+The plot is displayed below.
+
+![Correlation between News Articles Releases and COVID-19 Spread](writeup_plots/task3.png) The gray bars and gray line display the number of monthly news articles about COVID-19, while its axis corresponds to the right y-axis. The red line represents the total cases of covid-19 and corresponds to the left y-axis. (Note: Two y-axes are used here, so please be careful to distinguish between them.)
+
+#### Analysis
+
+From the graph we can see that when the number of news increases significantly, the growth of new infectious cases slows down. From the table you can see below, most notably from April to May 2020. You can check the information in the table below. The growth rate in the news releases in April (123.81%) is significantly higher than the new infectious cases' growth rate (26.34%). Meanwhile, the growth rate of news releases was only 8.55% from June to July, which means it increased very slowly, so that the new infectious cases increased extremely rapidly, approximately 89.01% from June to July 2020. This interesting phenomenon may also suggest that the news releases in the early stages of the pandemic were inversely correlated to the new infectious cases to some extent.
+
+|            |                      |                                |
+|------------|----------------------|--------------------------------|
+| **Month**  | **News Growth Rate** | **COVID-19 Cases Growth Rate** |
+| 2020-03-01 | 105.88               | 1223.20                        |
+| 2020-04-01 | 200.00               | 152.03                         |
+| 2020-05-01 | 123.81               | 26.34                          |
+| 2020-06-01 | 14.47                | 25.61                          |
+| 2020-07-01 | 8.55                 | 89.01                          |
+| 2020-08-01 | 2.05                 | -0.69                          |
+| 2020-09-01 | -29.87               | 22.15                          |
+
 ### Question 4: What are the differences in the disease manifestation among three pandemics, specifically in incubation period, mortality rate, and illness duration?
 
 ## Conclusion
@@ -205,3 +232,5 @@ We can also research on pandemics other than Cholera, Dengue and COVID-19, and c
 -   CBSNEWS: <https://www.cbsnews.com/news/covid-cases-in-uk-surge-as-britain-and-other-european-nations-face-possible-second-lockdowns/>
 
 -   Samina Amin, Muhammad Ali Zeb, Hani Alshahrani, Mohammed Hamdi, Mohammad Alsulami, Asadullah Shaikh. Social Media-Based Surveillance Systems for Health Informatics Using Machine and Deep Learning Techniques: A Comprehensive Review and Open Challenges. CMES - Computer Modeling in Engineering and Sciences, Volume 139, Issue 2, 2024, Pages 1167-1202, ISSN 1526-1492, <https://doi.org/10.32604/cmes.2023.043921.> (<https://www.sciencedirect.com/science/article/pii/S152614922400198X)>
+
+-   The website of news: <https://www.mdpi.com/search?sort=pubdate&page_no=14&page_count=200&year_from=2020&year_to=2020&q=Covid&view=compact>
